# Pico-DSP-Garden

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RP2350_Hardware_Interpolators  RP2350_Hardware_Interpolators.md
AGENTS/: architecture.md  audio-runtime.md  build.md  gotchas.md  rpdsp-api.md
Docs/: Hardware_Interpolators.md  ToDo.md  algorithm_catalog.md  dsp_paper_shortlist.md  roadmap.md  (+3 more)
tests/: CMakeLists.txt  main.cpp  test_algorithm.cpp  test_compile_all.cpp  test_control_surface.cpp  test_counterpoint_pipeline.cpp  test_oscillator.cpp  test_tension_sculptor_pipeline.cpp
tests/build-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  rpdsp_tests.sln  rpdsp_tests.vcxproj  rpdsp_tests.vcxproj.filters
tests/build-codex/Testing/Temporary/: CTestCostData.txt
tests/build-codex/rpdsp_tests.dir/Debug/: rpdsp_tests.exe.recipe
tests/build-codex/rpdsp_tests.dir/Debug/rpdsp_tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
tests/build-codex/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
tests/build-codex/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
tests/build-codex/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
tests/build-codex/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+174 files in other folders)
